startup script change to support setting of fedora.serverProfile property to whatever the first parameter is to the script.